# Sequential_Archive

./: .gitignore  Common_Data.h  Common_Strings.h  Packer.cpp  Packer.h  README.md  Reader.cpp  Reader.h  Scrambler.cpp  Scrambler.h  Sequential_Archive.cpp  Sequential_Archive.h  Sequential_Archive.pro  Sequential_Archive.pro.user.9a5d757  Sequential_Archive_Interface.h  Unpacker.cpp  Unpacker.h
Installer/: How to Compile the Installer.txt  SAM.nsi
Sequential_Archive/: CMakeLists.txt  Common_Data.h  Common_Strings.h  Packer.cpp  Packer.h  Reader.cpp  Reader.h  Scrambler.cpp  Scrambler.h  Sequential_Archive.cpp  Sequential_Archive.h  Sequential_Archive.pro  Sequential_Archive.pro.user.9a5d757  Sequential_Archive_Interface.h
Sequential_Archive_Manager/: Archive_Mode.h  CMakeLists.txt  Command_Line_Runner.cpp  Command_Line_Runner.h  Common_Strings.h  Error_Messages.cpp  Error_Messages.h  Main_Window.cpp  Main_Window.h  Main_Window.ui  Manager_Common_Strings.h  Sequential_Archive.rc  Sequential_Archive_Manager.pro  Version.h  Viewer.cpp  Viewer.h  Viewer.ui  archive_mode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Sequential_Archive_Manager/Build_Scripts/Unix/: Deploy_New_Version.sh  Prepare_Runtime.sh
Sequential_Archive_Manager/Build_Scripts/Windows/: Prepare_Runtime.bat
Sequential_Archive_Manager/Build_Scripts/Windows/Installer/: SAM.nsi  UPDATES AND SOURCE CODE.TXT
